# holoC

./: .gitignore  CMakeLists.txt  sdkconfig  sdkconfig.old
components/app/: CMakeLists.txt
components/app/time_app/: time_app.c  time_app.h  ui_time.c  ui_time.h
components/app/weather_app/: ui_weather.c  ui_weather.h  weather_app.c  weather_app.h
components/drivers/: CMakeLists.txt
components/drivers/LcdSpi/: lcd_spi.c  lcd_spi.h
components/drivers/Mpu6050/: kalmen_filter.c  kalmen_filter.h  mpu_iic.c  mpu_iic.h
components/drivers/SD/: sd_dev.c  sd_dev.h
components/drivers/Wifi/: wifi.c  wifi.h
components/lvgl/: CMakeLists.txt  lv_conf.h
components/lvgl/lvgl_driver/: lv_port_disp.c  lv_port_disp.h  lv_port_indev.c
components/lvgl/src/font/: lv_font.mk  myFont.c
components/network/: CMakeLists.txt
components/network/http/: http.c  http.h
components/network/webserver/: webserver.c  webserver.h
components/network/webserver/handlers/: uri_handler.c  uri_handler.h
components/system_config/: CMakeLists.txt  soft_config.h
main/: CMakeLists.txt  holoC.c
